# cs2-demo-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: demo_parsing.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  USAGE.md
examples/: analyze_demo_structure.rs  basic_usage.rs  integration_example.rs  real_usage.rs  simple_usage.rs
examples/data/: README.md
src/: error.rs  events.rs  lib.rs
src/parser/: demo_parser.rs  event_extractor.rs  mod.rs  protobuf_parser.rs
src/utils/: mod.rs  position.rs  time.rs  validation.rs
